--- a/PS6/ps6-template.tex
+++ b/PS6/ps6-template.tex
@@ -15,11 +15,11 @@
 \setlength{\parindent}{0pt}
 \medskip\hrulefill\medskip
 
-{\bf Name:} Your Name
+{\bf Name:} Asem Ashraf
 
 \medskip
 
-{\bf Collaborators:} Name1, Name2
+{\bf Collaborators:} None
 
 \medskip\hrulefill
 
@@ -82,12 +82,14 @@
 
 \begin{problemparts}
 \problempart % Problem 1a
+the topological order for dag relaxation [a, d, b, e, f, c]
+DAG relaza
 \problempart % Problem 1b
 \end{problemparts}
 
 \newpage
 \problem  % Problem 2
-
+The given graph does not contain negative weight cycles because the problem said there is minimum weight path from  s to v in at most k edges. no actually forget i said that he said some minimum weight path
 \newpage
 \problem  % Problem 3
 
@@ -99,6 +101,7 @@
 
 \newpage
 \problem  % Problem 6
+Solved in the python code file
 
 \end{problems}
 
